--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -52,7 +52,8 @@
     "hotel_features_services": "امکانات و خدمات هتل",
     "hotel_location": "لوکیشن هتل",
     "hotel_rules": "قوانین هتل",
-    "multiple_hotels": "هتل های زنجیره ای"
+    "multiple_hotels": "هتل های زنجیره ای",
+    "language": "زبان"
   },
   "forms": {
     "accomodation_name": "نام اقامتگاه",
