--- a/public/locales/aq/translation.json
+++ b/public/locales/aq/translation.json
@@ -9,6 +9,8 @@
   "submit": "إرسال",
   "new": "جديد",
   "location": "موقع",
+  "meter": "متر",
+  "delete_chosed_items": "حذف العناصر المختارة",
   "uploadError": "يمكنك تحميل {{files}} فقط",
   "system_notification": "إشعار النظام",
   "file-invalid-type": "نوع الملف غير صالح",
@@ -51,7 +53,7 @@
     "vip_hotel_services": "خدمات فندقية لكبار الشخصيات",
     "foreign_guests_price": "سعر الضيوف الأجانب",
     "hotel_rooms_features": "مميزات غرف الفندق",
-    "hotel_features_services": "مميزات وخدمات الفندق",
+    "hotel_features_services": "مميزات و الفندق",
     "hotel_location": "موقع الفندق",
     "hotel_rules": "قواعد الفندق",
     "multiple_hotels": "قواعد الفندق",
@@ -136,5 +138,57 @@
   },
   "distance_to_places": {
     "important_places_around_hotel": "الأماكن المهمة حول الفندق"
+  },
+  "facilitiesArabic": {
+    "lobby": "اللوبي",
+    "jacuzzi": "جاكوزي",
+    "newspaper": "صحيفة",
+    "elevator": "المصعد",
+    "coffee_shop": "مقهى",
+    "hairdressers": "صالون تصفيف الشعر",
+    "alarm": "إنذار",
+    "luggage_room": "غرفة الأمتعة",
+    "smoking_room": "غرفة التدخين",
+    "sport_field": "ملعب رياضي",
+    "medical_services": "خدمات طبية",
+    "cab": "تاكسي",
+    "emergency_exit": "مخرج الطوارئ",
+    "billiard_hall": "صالة البلياردو",
+    "24_hour_reception": "استقبال على مدار 24 ساعة",
+    "shoe_wax_machine": "جهاز تلميع الأحذية",
+    "wake_up_service": "خدمة الإيقاظ",
+    "fire_extinguisher": "جهاز إطفاء الحريق",
+    "housekeeping_services": "خدمات تنظيف الغرف",
+    "fire_alarm_system": "نظام إنذار الحريق",
+    "fax": "فاكس",
+    "sauna": "ساونا",
+    "massage": "تدليك",
+    "swimming_pool": "حمام سباحة",
+    "printer": "طابعة",
+    "photocopier": "آلة نسخ",
+    "internet_cafe": "مقهى الإنترنت",
+    "parking_lot": "موقف السيارات",
+    "green_space": "مساحة خضراء",
+    "atm": "صراف آلي",
+    "prayer_room": "غرفة الصلاة",
+    "sports_hall": "صالة رياضية",
+    "porter_service": "خدمة الحمال",
+    "telephone_in_the_lobby": "هاتف في اللوبي",
+    "traditional_teahouse": "مقهى تقليدي لتقديم الشاي",
+    "internet_movie_network_in_the_lobby": "شبكة الأفلام عبر الإنترنت في اللوبي",
+    "laundry_dryer": "غسالة ملابس (جافة)",
+    "tv_in_the_lobby": "تلفزيون في اللوبي",
+    "air_conditioning_system": "نظام تكييف الهواء",
+    "telephone_room_operator": "غرفة الهاتف (مشغل)",
+    "toilet_in_the_lobby": "مرحاض في اللوبي",
+    "service_iranian_toilet_in_the_lobby": "مرحاض إيراني في اللوبي",
+    "iranian_toilet_in_the_floors": "مرحاض إيراني في الطوابق"
+  },
+  "countries": {
+    "iran": "إيران",
+    "turkey": "تركيا",
+    "iraq": "العراق",
+    "english": "إنجلترا",
+    "usa": "أمريكا"
   }
 }
