--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,6 +9,8 @@
   "submit": "submit",
   "new": "new",
   "location": "location",
+  "meter": "meter",
+  "delete_chosed_items": "delete chosed items",
   "uploadError": "you can upload only {{files}} file",
   "system_notification": "System Notification",
   "file-invalid-type": "File type is invalid",
@@ -51,7 +53,7 @@
     "vip_hotel_services": "VIP Hotel Services",
     "foreign_guests_price": "Foreign Guests Price",
     "hotel_rooms_features": "Hotel Rooms Features",
-    "hotel_features_services": "Hotel Features & Services",
+    "hotel_features_services": "Hotel Services",
     "hotel_location": "Hotel Location",
     "hotel_rules": "Hotel Rules",
     "multiple_hotels": "Multiple Hotels",
@@ -136,5 +138,57 @@
   },
   "distance_to_places": {
     "important_places_around_hotel": "Important Places Around Hotel"
+  },
+  "facilities": {
+    "lobby": "lobby",
+    "jacuzzi": "Jacuzzi",
+    "newspaper": "Newspaper",
+    "elevator": "Elevator",
+    "coffee_shop": "Coffee Shop",
+    "hairdressers": "Hairdresser's",
+    "alarm": "alarm",
+    "luggage_room": "Luggage room",
+    "smoking_room": "smoking room",
+    "sport_field": "sport field",
+    "medical_services": "medical services",
+    "cab": "cab",
+    "emergency_exit": "emergency exit",
+    "billiard_hall": "Billiard hall",
+    "24_hour_reception": "24 hour reception",
+    "shoe_wax_machine": "Shoe wax machine",
+    "wake_up_service": "Wake up service",
+    "fire_extinguisher": "Fire extinguisher",
+    "housekeeping_services": "Housekeeping services",
+    "fire_alarm_system": "Fire Alarm System",
+    "fax": "Fax",
+    "sauna": "Sauna",
+    "massage": "Massage",
+    "swimming_pool": "Swimming pool",
+    "printer": "Printer",
+    "photocopier": "Photocopier",
+    "internet_cafe": "Internet cafe",
+    "parking_lot": "Parking lot",
+    "green_space": "Green space",
+    "atm": "ATM",
+    "prayer_room": "Prayer room",
+    "sports_hall": "Sports hall",
+    "porter_service": "Porter service",
+    "telephone_in_the_lobby": "Telephone in the lobby",
+    "traditional_teahouse": "Traditional teahouse",
+    "internet_movie_network_in_the_lobby": "Internet movie network in the lobby",
+    "laundry_dryer": "Laundry (dryer)",
+    "tv_in_the_lobby": "TV in the lobby",
+    "air_conditioning_system": "Air conditioning system",
+    "telephone_room_operator": "Telephone room (operator)",
+    "toilet_in_the_lobby": "Toilet in the lobby",
+    "service_iranian_toilet_in_the_lobby": "Service Iranian toilet in the lobby",
+    "iranian_toilet_in_the_floors": "Iranian toilet in the floors"
+  },
+  "countries":{
+    "iran": "Iran",
+    "turkey": "Turkey",
+    "iraq": "Iraq",
+    "english": "English",
+    "usa": "USA"
   }
 }
