--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -9,6 +9,8 @@
   "submit": "ثبت",
   "new": "جدید",
   "location": "مکان",
+  "meter": "متر",
+  "delete_chosed_items": "حذف آیتم های انتخاب شده",
   "uploadError": "شما فقط می توانید {{files}} فایل آپلود کنید",
   "system_notification": "پیام سیستم",
   "file-invalid-type": "نوع فایل معتبر نیست",
@@ -51,7 +53,7 @@
     "vip_hotel_services": "امکانات ویژه هتل",
     "foreign_guests_price": "نرخ مهمانان خارجی",
     "hotel_rooms_features": "امکانات اتاق های هتل",
-    "hotel_features_services": "امکانات و خدمات هتل",
+    "hotel_features_services": "امکانات هتل",
     "hotel_location": "لوکیشن هتل",
     "hotel_rules": "قوانین هتل",
     "multiple_hotels": "هتل های زنجیره ای",
@@ -136,5 +138,57 @@
   },
   "distance_to_places": {
     "important_places_around_hotel": "مکان های مهم اطراف هتل"
+  },
+  "facilities":{
+    "lobby": "لابی",
+    "jacuzzi": "جکوزی",
+    "newspaper": "روزنامه",
+    "elevator": "آسانسور",
+    "coffee_shop": "کافی شاپ",
+    "hairdressers": "آرایشگاه",
+    "alarm": "زنگ هشدار",
+    "luggage_room": "اتاق چمدان",
+    "smoking_room": "اتاق سیگار",
+    "sport_field": "زمین ورزشی",
+    "medical_services": "خدمات پزشکی",
+    "cab": "تاکسی سرویس",
+    "emergency_exit": "پله اضطراری",
+    "billiard_hall": "سالن بیلیارد",
+    "24_hour_reception": "پذیرش 24 ساعته",
+    "shoe_wax_machine": "دستگاه واکس کفش",
+    "wake_up_service": "خدمات بیدار باش",
+    "fire_extinguisher": "کپسول آتش نشانی",
+    "housekeeping_services": "خدمات خانه داری",
+    "fire_alarm_system": "سیستم اعلام حریق",
+    "fax": "فکس",
+    "sauna": "سونا",
+    "massage": "ماساژ",
+    "swimming_pool": "استخر",
+    "printer": "پرینتر",
+    "photocopier": "فتوکپی",
+    "internet_cafe": "فروشگاه کافی نت",
+    "parking_lot": "پارکینگ",
+    "green_space": "فضای سبز",
+    "atm": "خودپرداز",
+    "prayer_room": "نمازخانه",
+    "sports_hall": "سالن ورزشی",
+    "porter_service": "خدمات باربری",
+    "telephone_in_the_lobby": "تلفن در لابی",
+    "traditional_teahouse": "چایخانه سنتی",
+    "internet_movie_network_in_the_lobby": "شبکه پخش فیلم اینترنت در لابی",
+    "laundry_dryer": "لاندری (خشکشویی)",
+    "tv_in_the_lobby": "تلویزیون در لابی",
+    "air_conditioning_system": "سیستم تهویه مطبوع",
+    "telephone_room_operator": "اتاق تلفن (اپراتور)",
+    "toilet_in_the_lobby": "سرویس بهداشتی فرنگی در لابی",
+    "service_iranian_toilet_in_the_lobby": "سرویس بهداشتی ایرانی در لابی",
+    "iranian_toilet_in_the_floors": "سرویس بهداشتی ایرانی در طبقات"
+  },
+  "countries":{
+    "iran": "ایران",
+    "turkey": "ترکیه",
+    "iraq": "عراق",
+    "english": "انگلستان",
+    "usa": "آمریکا"
   }
 }
