--- a/public/locales/tr/translation.json
+++ b/public/locales/tr/translation.json
@@ -9,6 +9,8 @@
   "submit": "gönder",
   "new": "yeni",
   "location": "yer",
+  "meter": "metre",
+  "delete_chosed_items": "Seçilen öğeleri sil",
   "uploadError": "yalnızca {{files}} dosya yükleyebilirsiniz",
   "system_notification": "Sistem Bildirimi",
   "file-invalid-type": "Dosya türü geçersiz",
@@ -51,7 +53,7 @@
     "vip_hotel_services": "VIP Otel Hizmetleri",
     "foreign_guests_price": "Yabancı Misafir Fiyatları",
     "hotel_rooms_features": "Otel Odalarının Özellikleri",
-    "hotel_features_services": "Otel Özellikleri ve Hizmetleri",
+    "hotel_features_services": "Otel Hizmetleri",
     "hotel_location": "Otel Konumu",
     "hotel_rules": "Otel Kuralları",
     "multiple_hotels": "Çoklu Oteller",
@@ -136,5 +138,57 @@
   },
   "distance_to_places": {
     "important_places_around_hotel": "Otelin Çevresindeki Önemli Yerler"
+  },
+  "facilitiesTurkish": {
+    "lobby": "Lobi",
+    "jacuzzi": "Jakuzi",
+    "newspaper": "Gazete",
+    "elevator": "Asansör",
+    "coffee_shop": "Kafe",
+    "hairdressers": "Kuaför",
+    "alarm": "Alarm",
+    "luggage_room": "Bavul Odası",
+    "smoking_room": "Sigara içme odası",
+    "sport_field": "Spor alanı",
+    "medical_services": "Tıbbi hizmetler",
+    "cab": "Taksi",
+    "emergency_exit": "Acil çıkış",
+    "billiard_hall": "Bilardo salonu",
+    "24_hour_reception": "24 saat resepsiyon",
+    "shoe_wax_machine": "Ayakkabı cilalama makinesi",
+    "wake_up_service": "Uyandırma servisi",
+    "fire_extinguisher": "Yangın söndürücü",
+    "housekeeping_services": "Oda temizlik hizmetleri",
+    "fire_alarm_system": "Yangın alarm sistemi",
+    "fax": "Faks",
+    "sauna": "Sauna",
+    "massage": "Masaj",
+    "swimming_pool": "Yüzme havuzu",
+    "printer": "Yazıcı",
+    "photocopier": "Fotokopi makinesi",
+    "internet_cafe": "İnternet kafe",
+    "parking_lot": "Otopark",
+    "green_space": "Yeşil alan",
+    "atm": "ATM",
+    "prayer_room": "Namaz odası",
+    "sports_hall": "Spor salonu",
+    "porter_service": "Portör hizmeti",
+    "telephone_in_the_lobby": "Lobi'de telefon",
+    "traditional_teahouse": "Geleneksel çay evi",
+    "internet_movie_network_in_the_lobby": "Lobi'de İnternet film ağı",
+    "laundry_dryer": "Çamaşır (kurutma)",
+    "tv_in_the_lobby": "Lobi'de TV",
+    "air_conditioning_system": "Klima sistemi",
+    "telephone_room_operator": "Telefon odası (operatör)",
+    "toilet_in_the_lobby": "Lobi'de tuvalet",
+    "service_iranian_toilet_in_the_lobby": "Lobi'de İran tuvaleti",
+    "iranian_toilet_in_the_floors": "Katlarda İran tuvaleti"
+  },
+  "countries":{
+    "iran": "İran",
+    "turkey": "Türkiye",
+    "iraq": "Irak",
+    "english": "İngiltere",
+    "usa": "Amerika"
   }
 }
